2025-07-09 CTZ: Se agrega checks a packaging.

--- a/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/CTZ_Projects/EditProject.cshtml
@@ -464,7 +464,7 @@
                                  && currentDept == (int)DepartmentEnum.Sales) || isAdmin)
                             {
                                 <button id="btnSubmitAction" data-dept="Sales" class="btn btn-primary">
-                                    <i class="fa-regular fa-envelope"></i> Send Quote
+                                    <i class="fa-regular fa-envelope"></i> Send Feasibility
                                 </button>
                             }
                             @* 2) Panel dinámico para reenvíos y flujos posteriores *@
